Bug 4717 - Fails to build with GCC 4.3
Summary: Fails to build with GCC 4.3
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-30 21:49 UTC by Eugeniy Meshcheryakov
Modified: 2007-08-13 21:57 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
patch (171 bytes, patch)
2007-06-30 21:49 UTC, Eugeniy Meshcheryakov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eugeniy Meshcheryakov 2007-06-30 21:49:16 UTC
#include <cstdlib> is missing:

if x86_64-linux-gnu-g++ -DHAVE_CONFIG_H -I. -I. -I.  -DBINDIR='"/usr/bin"'
-DPKGDATADIR='"/usr/share/systemtap"' -DPKGLIBDIR='"/usr/lib/systemtap"'
-DPERFMON   -Wall -Wextra -Werror -Wall -g -D_GNU_SOURCE -O2 -MT
stap-coveragedb.o -MD -MP -MF ".deps/stap-coveragedb.Tpo" -c -o
stap-coveragedb.o `test -f 'coveragedb.cxx' || echo './'`coveragedb.cxx; \
        then mv -f ".deps/stap-coveragedb.Tpo" ".deps/stap-coveragedb.Po"; else
rm -f ".deps/stap-coveragedb.Tpo"; exit 1; fi
coveragedb.cxx: In function 'void update_coverage_db(systemtap_session&)':
coveragedb.cxx:292: error: 'EXIT_FAILURE' was not declared in this scope
coveragedb.cxx:292: error: 'exit' was not declared in this scope
Comment 1 Eugeniy Meshcheryakov 2007-06-30 21:49:44 UTC
Created attachment 1907 [details]
patch
Comment 2 William Cohen 2007-07-02 20:35:38 UTC
Checked that this changes backward compatible with FC6 and RHEL4. Added the
#include to the appropriate file.
Comment 3 Josh Stone 2007-08-13 21:57:13 UTC
This appears to be fixed -- please reopen if you have any more trouble.