	PR 4717 	From Eugeniy Meshcheryakov <eugen@debian.org> 	* staptree.cxx: Add #include <cstdlib> for gcc 4.3.